--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "node index.js"
   },
   "author": "Felipe Bojorquez",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "tmi.js": "^1.7.3"
+  }
 }
