--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Felipe Bojorquez",
   "license": "MIT",
   "dependencies": {
+    "@azure/ai-text-analytics": "^5.0.0",
     "tmi.js": "^1.7.3"
   }
 }
