--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@azure/ai-text-analytics": "^5.0.0",
+    "express": "^4.17.1",
     "tmi.js": "^1.7.3"
   }
 }
