--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@azure/ai-text-analytics": "^5.1.0",
+    "@azure/storage-blob": "^12.14.0",
     "axios": "^0.22.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
