--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@azure/ai-text-analytics": "^5.1.0",
     "@azure/storage-blob": "^12.14.0",
+    "@twurple/auth": "^6.1.2",
+    "@twurple/chat": "^6.1.2",
     "axios": "^0.22.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
