--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "botshu",
-  "version": "1.0.0",
+  "version": "8.0.0-beta.1",
   "description": "Twitch chat bot for Mushu",
   "main": "index.js",
   "scripts": {
