--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "",
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=18.14.0"
+  },
   "author": "Felipe Bojorquez",
   "license": "MIT",
   "dependencies": {
