--- a/.github/workflows/main_botshu-app-service.yml
+++ b/.github/workflows/main_botshu-app-service.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Deploy BotShu to production
+name: Build and deploy BotShu to production
 
 on:
   push:
