--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.7.2"
   }
 }
