--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "botshu",
-  "version": "8.1.0",
+  "version": "9.0.0-alpha.1",
   "description": "Twitch chat bot for Mushu",
   "main": "index.js",
   "scripts": {
