--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js"
   },
   "engines": {
-    "node": ">=18.14.0"
+    "node": "^20.11.1"
   },
   "author": "Felipe Bojorquez",
   "license": "MIT",
